<resources>
    <string name="app_name">Kotlin June Batch</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account_msg">Don\'t have any account?</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter your password</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="enter_value">Enter Value</string>
    <string name="checkbox">Checkbox</string>
    <string name="check_box_checked">Checkbox checked</string>
    <string name="check_box_unchecked">Checkbox unchecked</string>
    <string name="number">Number</string>
    <string name="minus">-</string>
    <string name="multiply_sign">*</string>
    <string name="add_sign">+</string>
    <string name="singapore">Singapore</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="about_singapore">Singapore officially the Republic of Singapore, and often referred to as the Lion City, Garden City and the Red Dot, is a global city in Southeast Asia and the world’s only island city state. It lies one degree(137 km) north to the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia’s Riau Islands to the south. Singapore’s territory consists of the diamond shaped main island and 62 islets</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="snackbar">Snackbar</string>
    <string name="alert">Alert</string>
    <string name="title">Title</string>
    <string name="positive_button">Positive Button</string>
    <string name="toast">Toast</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_activity_method">Change Activity Method</string>
    <string name="navigate">Navigate</string>
    <string name="pop">Pop</string>
    <string name="enter_your_city">Enter your city</string>

    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>