<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:text="@string/enter_your_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/etName"
        android:paddingVertical="10dp"
        android:hint="@string/enter_your_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/btnCancel"
            android:paddingVertical="10dp"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/btnSet"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:text="@string/set"/>
    </LinearLayout>

</LinearLayout>