<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:layout_marginVertical="30dp"
        android:fontFamily="sans-serif-black"
        android:id="@+id/login"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@color/red"
        android:textSize="40sp"/>

    <EditText
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/username"/>

    <EditText
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnLogin"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>


    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/purple_200"
            android:text="@string/no_account_msg"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>