<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/multiply_sign"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:text="@string/minus"
        android:id="@+id/btnMinus"
        android:layout_toLeftOf="@+id/tvNumber"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:id="@+id/btnAdd"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvNumber"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:id="@+id/btnDivide"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvNumber"/>

</RelativeLayout>