<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="username"
        android:textSize="25dp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:fontFamily="sans-serif-black"
        />

<EditText
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/app_name"
    android:textColorHint="@color/purple_200"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/password"
    android:textSize="20dp"
    android:fontFamily="sans-serif-black"
    android:textColor="@color/purple_200"
    />
    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/purple_200"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/yellow"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>


